--- a/basis/basis_start.html
+++ b/basis/basis_start.html
@@ -31,11 +31,6 @@
 
 
     <div class="content-inner">
-      <div class="information-extra" style="background: white;">
-<img id="information-icon" src="../public/afbeeldingen/information.png">
-<span style="display: block; font-size: 12px; margin-bottom: 20px; border-left: 3px solid #0083B0; padding-left: 10px; line-height: 1.35em;">Het is belangrijk om eerst de basis van krachttraining te kennen.
-Voltooi daarom eerst onderstaande stappen. Daarna kan je meer te weten komen over de veelgebruikte termen en tips.</span>
-</div>
       <div id="slide-outer">
               <div id="slide1" class="zichtbaar">
                 <p>
@@ -73,6 +68,12 @@ Voltooi daarom eerst onderstaande stappen. Daarna kan je meer te weten komen ove
       </div>
 </div>
   </main>
+
+  <div class="information-extra" style="background: white;">
+  <img id="information-icon" src="../public/afbeeldingen/information.png">
+  <span style="display: block; font-size: 12px; margin-bottom: 20px; border-left: 3px solid #0083B0; padding-left: 10px; line-height: 1.35em;">Het is belangrijk om eerst de basis van krachttraining te kennen.
+  Voltooi daarom eerst bovenstaande stappen. Daarna kan je meer te weten komen over de veelgebruikte termen en tips.</span>
+  </div>
 
 <div id="remove" class="btn-bottom locked">
   <div class="btn-bottom-two-columns">
