--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <!--Importeren stylesheets -->
 
-  <link rel="stylesheet" type="text/css" href="public/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="public/css/reset.css">
   <link rel="stylesheet" type="text/css" href="public/css/style.css">
 
   <!--Importeren fonts -->
