--- a/basis/basis_start.html
+++ b/basis/basis_start.html
@@ -8,12 +8,13 @@
 
   <link rel="stylesheet" type="text/css" href="../public/css/reset.css">
   <link rel="stylesheet" type="text/css" href="../public/css/style.css">
+  <!-- <link rel="stylesheet" type="text/css" href="../public/css/test.css"> -->
 
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -69,20 +70,20 @@
 </div>
   </main>
 
-  <div class="information-extra" style="background: white;">
+  <!-- <div class="information-extra" style="background: white;">
   <img id="information-icon" src="../public/afbeeldingen/information.png">
   <span style="display: block; font-size: 12px; margin-bottom: 20px; border-left: 3px solid #0083B0; padding-left: 10px; line-height: 1.35em;">Het is belangrijk om eerst de basis van krachttraining te kennen.
   Voltooi daarom eerst bovenstaande stappen. Daarna kan je meer te weten komen over de veelgebruikte termen en tips.</span>
-  </div>
+  </div> -->
 
 <div id="remove" class="btn-bottom locked">
   <div class="btn-bottom-two-columns">
   <a class="termen-btn" href="termen.html">
-    <h4>Belangrijke termen</h4>
+    <h1>Belangrijke termen</h1>
   </a>
 
   <a class="termen-btn" href="tips.html">
-    <h4>Tips & Tricks</h4>
+    <h1>Tips <br> & Tricks</h1>
   </a>
 </div>
 </div>
@@ -92,12 +93,12 @@
         <li id="active-tab-footer">
           <a href="basis_start.html">
           <div>
-        <img src="../public/afbeeldingen/basis.png">
-        <p>Basis</p>
+        <img src="../public/afbeeldingen/basis-blue.png">
+        <p style="color: #22a6b3;">Basis</p>
       </div></a>
       </li>
-        <li><a href="../oefeningen/oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen.png"></a></li>
-        <li><a href="../voeding/voeding_start.html"><img src="../public/afbeeldingen/voeding.png"></a></li>
+        <li><a href="../oefeningen/oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen-black.png"></a></li>
+        <li><a href="../voeding/voeding_start.html"><img src="../public/afbeeldingen/voeding-black.png"></a></li>
       </ul>
   </footer>
 
