--- a/basis/termen.html
+++ b/basis/termen.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +24,7 @@
 
   <header id="header-blauw">
     <a href="javascript: history.go(-1)">
-    <img id="back-arrow" src="../public/afbeeldingen/back-arrow.png"></a>
+    <img id="back-arrow" src="../public/afbeeldingen/back-arrow-black.png"></a>
     <h1>Belangrijke termen</h1>
   </header>
   <main class="termen content-with-nav">
@@ -32,7 +33,7 @@
 
     <div class="content-inner">
       <div class="termen-info">
-        <img id="information-icon" src="../public/afbeeldingen/information.png">
+        <!-- <img id="information-icon" src="../public/afbeeldingen/information.png"> -->
         <p>
           Vanaf je zelf opzoekwerk begint te doen, zal je veel termen tegenkomen (artikels, trainingsschema's,...). Het is belangrijk dat je weet wat ze betekenen.
         </p>
@@ -65,14 +66,15 @@
         <li id="active-tab-footer">
           <a href="basis_start.html">
           <div>
-        <img src="../public/afbeeldingen/basis.png">
-        <p>Basis</p>
+        <img src="../public/afbeeldingen/basis-blue.png">
+        <p style="color: #22a6b3;">Basis</p>
       </div></a>
       </li>
-        <li><a href="../oefeningen/oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen.png"></a></li>
-        <li><a href="../voeding/voeding_start.html"><img src="../public/afbeeldingen/voeding.png"></a></li>
+        <li><a href="../oefeningen/oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen-black.png"></a></li>
+        <li><a href="../voeding/voeding_start.html"><img src="../public/afbeeldingen/voeding-black.png"></a></li>
       </ul>
   </footer>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
