--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 
 <head>
-  <title>Krachttraining voor beginners - Startscherm</title>
+  <title>Krachttraining voor beginners - Introductie</title>
 
   <!--Importeren stylesheets -->
 
@@ -12,32 +12,55 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body class="welkom">
-    <main>
-      <a href="introductie/introductie.html" target="_self">
-      <div class="content">
-        <div class="contentcenter">
-        <div class="logo">
-        <img id="welkom_logo" src="public/afbeeldingen/logo_KVB.png">
+<body class="introductie">
+
+<main>
+  <div class="content-inner">
+    
+    <div class="logo">
+    <img id="welkom_logo" src="public/afbeeldingen/logo_KVB.png">
+  </div>
+
+    <h1>Welkom!</h1>
+<div id="slide-outer">
+        <div id="slide1" class="zichtbaar">
+          <p>
+          Je bent recent begonnen met krachttraining. Je bent gemotiveerd! Maar hoe begin je hier aan?</p>
+          <p><span id="highlight-text-rood">Krachttraining voor beginners</span>
+          biedt je informatie aan over de basisprincipes van krachttraining, verschillende oefeningen met duidelijke instructies en informatie over voeding.</p>
+          <div class="nextprev">
+            <button class="btn-next-prev" id="btn-red" style="visibility: hidden;" onclick="previous()">Vorige</button>
+          <button class="btn-next-prev" id="btn-red" onclick="next()">Volgende</button>
+        </div>
       </div>
 
-      <h1 style="margin-bottom: 10px;">Krachttraining voor beginners</h1>
-      <p style="text-align: center; font-size: 1.5em;">Vandaag behalen we resultaten!</p>
+        <div id="slide2" class="onzichtbaar">
+          <p>
+           Vooraleer je start met krachttraining is het namelijk belangrijk om de <span id="highlight-text-rood">basisprincipes</span> te kennen. Zo kan jij je doelen efficiënt, snel én slim behalen.</p>
+           <p>
+             Met de juiste basiskennis weet jij als de beste hoe je oefeningen moet uitvoeren, wat de impact van voeding op je spieren is en hoe je deze spieren sneller laat groeien.</p>
+          <div class="nextprev">
+            <button class="btn-next-prev" id="btn-red" onclick="previous()">Vorige</button>
+            <a class="btn-next-prev" id="btn-red" href="basis/basis_start.html">Start</a>
+          <!-- <button class="btn-next-prev" id="btn-red" onclick="next()">Volgende</button> -->
+        </div>
       </div>
 
-      </div>
-</a>
-    </main>
+</div>
+    </div>
 
-    <!--Importeren scripts -->
+  </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
-    <script src="javascript/index.js"></script>
+  <!--Importeren scripts -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="javascript/index.js"></script>
 
 </body>
 
