--- a/introductie/introductie_not_used.html
+++ b/introductie/introductie_not_used.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +20,7 @@
 
 <body class="introductie">
 
-  <header id="header_intro">
+  <header style="visibility: hidden;" id="header_intro">
   </header>
 
   <main>
@@ -35,38 +36,26 @@
         <div id="slide1" class="zichtbaar">
           <p>
           Je bent recent begonnen met krachttraining. Je bent gemotiveerd! Maar hoe begin je hier aan?</p>
-          <p><span style="color: #d31027;">Krachttraining voor beginners</span>
+          <p><span id="highlight-text-red">Krachttraining voor beginners</span>
           biedt je informatie aan over de basisprincipes van krachttraining, verschillende oefeningen met duidelijke instructies en informatie over voeding.</p>
           <div class="nextprev">
             <button class="btn-next-prev" id="btn-red" style="visibility: hidden;" onclick="previous()">Vorige</button>
-            <p>1/3</p>
           <button class="btn-next-prev" id="btn-red" onclick="next()">Volgende</button>
         </div>
       </div>
 
         <div id="slide2" class="onzichtbaar">
           <p>
-           Vooraleer je start met krachttraining is het namelijk belangrijk om de <span style="color: #d31027;">basisprincipes</span> te kennen. Zo kan jij je doelen efficiënt, snel én slim behalen.</p>
+           Vooraleer je start met krachttraining is het namelijk belangrijk om de <span id="highlight-text-red">basisprincipes</span> te kennen. Zo kan jij je doelen efficiënt, snel én slim behalen.</p>
            <p>
              Met de juiste basiskennis weet jij als de beste hoe je oefeningen moet uitvoeren, wat de impact van voeding op je spieren is en hoe je deze spieren sneller laat groeien.</p>
           <div class="nextprev">
             <button class="btn-next-prev" id="btn-red" onclick="previous()">Vorige</button>
-            <p>2/3</p>
-          <button class="btn-next-prev" id="btn-red" onclick="next()">Volgende</button>
+            <a class="btn-next-prev" id="btn-start" href="../basis/basis_start.html">Start</a>
+          <!-- <button class="btn-next-prev" id="btn-red" onclick="next()">Volgende</button> -->
         </div>
       </div>
 
-        <div id="slide3" class="onzichtbaar">
-          <p>
-          Krachttraining voor beginners is een informatieve app die je op weg zet tijdens de eerste weken of maanden van krachttraining.</p>
-          <p>De app heeft drie grote delen: <span style="color: #0083B0;">basis</span>, <span style="color: #d31027;">oefeningen</span> en <span style="color: #00841A;">voeding</span>.</p>
-          <p>Laten we starten!</p>
-          <div class="nextprev">
-            <button class="btn-next-prev" id="btn-red" onclick="previous()">Vorige</button>
-            <p>3/3</p>
-            <a class="btn-next-prev" id="btn-start" href="../basis/basis_start.html">Start</a>
-        </div>
-      </div>
 </div>
     </div>
 
