--- a/oefeningen/oefeningen_start.html
+++ b/oefeningen/oefeningen_start.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,8 +28,8 @@
   <main class="content-with-nav">
 
     <div class="content-inner">
-      <img id="information-icon" src="../public/afbeeldingen/information.png">
-      <span style="display: block; font-size: 12px; margin-bottom: 20px; border-left: 3px solid #1D976C; padding-left: 20px;">Voltooi de onderstaande stappen om toegang te krijgen tot de andere pagina's.</span>
+      <!-- <img id="information-icon" src="../public/afbeeldingen/information.png">
+      <span style="display: block; font-size: 12px; margin-bottom: 20px; border-left: 3px solid #1D976C; padding-left: 20px;">Voltooi de onderstaande stappen om toegang te krijgen tot de andere pagina's.</span> -->
       <div id="slide-outer">
         <div id="slide1" class="zichtbaar">
           <p>
@@ -67,37 +68,27 @@
 
   <div id="remove" class="btn-bottom locked">
 
-    <a class="termen-btn-full" href="oefeningen_per_spiergroep.html">
-      <h4>Alle oefeningen</h4>
+    <a class="termen-btn" href="oefeningen_per_spiergroep.html">
+      <h1>Alle oefeningen</h1>
     </a>
-
-    <!-- <div class="btn-bottom-two-columns">
-      <a class="termen-btn" href="voedingsmiddelen.html">
-        <h4>Voedingsmiddelen</h4>
-      </a>
-
-      <a class="termen-btn" href="voeding_extra.html">
-        <h4>Extra info</h4>
-      </a>
-    </div> -->
   </div>
 
   <footer id="footer-rood">
     <ul class="footer-nav">
       <li>
         <div>
-          <a href="../basis/basis_start.html"><img src="../public/afbeeldingen/basis.png"></a>
+          <a href="../basis/basis_start.html"><img src="../public/afbeeldingen/basis-black.png"></a>
         </div>
       </li>
       <li id="active-tab-footer">
         <div>
-          <a href="oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen.png"></a>
-        <p>Oefeningen</p>
+          <a href="oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen-red.png"></a>
+        <p style="color: #eb4d4b;">Oefeningen</p>
       </div>
     </li>
       <li>
         <div>
-          <a href="../voeding/voeding_start.html"><img src="../public/afbeeldingen/voeding.png"></a>
+          <a href="../voeding/voeding_start.html"><img src="../public/afbeeldingen/voeding-black.png"></a>
         </div>
       </li>
     </ul>
