--- a/voeding/voeding_start.html
+++ b/voeding/voeding_start.html
@@ -12,6 +12,7 @@
   <!--Importeren fonts -->
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,8 +29,6 @@
   <main class="content-with-nav">
 
     <div class="content-inner">
-      <img id="information-icon" src="../public/afbeeldingen/information.png">
-      <span style="display: block; font-size: 12px; margin-bottom: 20px; border-left: 3px solid #1D976C; padding-left: 20px;">Voltooi de onderstaande stappen om toegang te krijgen tot de andere pagina's.</span>
       <div id="slide-outer">
         <div id="slide1" class="zichtbaar">
           <p>
@@ -68,17 +67,17 @@
 
   <div id="remove" class="btn-bottom locked">
 
-    <a class="termen-btn-full" href="calculator.html">
-      <h4>Calculator</h4>
-    </a>
+    <!-- <a class="termen-btn" href="calculator.html">
+      <h1>Calculator</h1>
+    </a> -->
 
     <div class="btn-bottom-two-columns">
       <a class="termen-btn" href="voedingsmiddelen.html">
-        <h4>Voedingsmiddelen</h4>
+        <h1>Voedings-<br>middelen</h1>
       </a>
 
       <a class="termen-btn" href="voeding_extra.html">
-        <h4>Extra info</h4>
+        <h1>Extra <br>info</h1>
       </a>
     </div>
   </div>
@@ -87,14 +86,14 @@
     <ul class="footer-nav">
       <li>
         <div>
-          <a href="../basis/basis_start.html"><img src="../public/afbeeldingen/basis.png"></a>
+          <a href="../basis/basis_start.html"><img src="../public/afbeeldingen/basis-black.png"></a>
         </div>
       </li>
-      <li><a href="../oefeningen/oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen.png"></a></li>
+      <li><a href="../oefeningen/oefeningen_start.html"><img src="../public/afbeeldingen/oefeningen-black.png"></a></li>
       <li id="active-tab-footer">
         <div>
-          <a href="voeding_start.html"><img src="../public/afbeeldingen/voeding.png"></a>
-          <p>Voeding</p>
+          <a href="voeding_start.html"><img src="../public/afbeeldingen/voeding-green.png"></a>
+          <p style="color: #6ab04c;">Voeding</p>
         </div>
       </li>
     </ul>
